<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="새로고침"
        app:showAsAction="ifRoom" />

    <!-- 사용자 이름 표시 -->
    <item
        android:id="@+id/action_user_name"
        android:title="사용자"
        android:enabled="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <!-- app/src/main/res/menu/menu_main.xml 파일에 추가 -->
    <item
        android:id="@+id/action_subscription"
        android:orderInCategory="100"
        android:title="@string/action_subscription"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>